--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "vue-recyclerview",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Mastering Large Lists with the vue-recyclerview",
-  "main": "src/RecyclerView.vue",
+  "main": "dist/recyclerview.js",
   "directories": {
     "doc": "docs",
     "example": "examples"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node build"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,22 @@
     "vue",
     "recyclerview"
   ],
+  "devDependencies": {
+    "autoprefixer": "^6.7.2",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-istanbul": "^3.1.2",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.2.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "css-loader": "^0.28.3",
+    "style-loader": "^0.18.1",
+    "webpack": "^2.6.1",
+    "webpack-bundle-analyzer": "^2.2.1"
+  },
   "author": "Awe <hilongjw@gmail.com>",
   "license": "MIT",
   "bugs": {
