--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-recyclerview",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Mastering Large Lists with the vue-recyclerview",
   "main": "dist/recyclerview.js",
   "directories": {
-    "doc": "docs",
+    "build": "node build",
     "example": "examples"
   },
   "scripts": {
@@ -20,20 +20,16 @@
     "recyclerview"
   ],
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-istanbul": "^3.1.2",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.2.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "css-loader": "^0.28.3",
-    "style-loader": "^0.18.1",
-    "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^2.2.1"
+    "babel-cli": "^6.14.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015-rollup": "^1.2.0",
+    "cssnano": "^3.10.0",
+    "rollup": "^0.35.10",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-postcss": "^0.5.3",
+    "rollup-plugin-uglify": "^1.0.1"
   },
   "author": "Awe <hilongjw@gmail.com>",
   "license": "MIT",
