--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-recyclerview",
   "version": "0.1.2",
   "description": "Mastering Large Lists with the vue-recyclerview",
-  "main": "dist/recyclerview.js",
+  "main": "dist/vue-recyclerview.js",
   "directories": {
     "build": "node build",
     "example": "examples"
