update: npm file config

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "unpkg": "dist/vue-recyclerview.js",
   "files": [
     "src",
-    "dist/*.js",
+    "dist/*.js"
   ],
   "keywords": [
     "vue-recyclerview",
